Update script source and add smooth scrolling to HTML

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eye tracking</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="https://webgazer.cs.brown.edu/webgazer.js?" defer></script>
+    <script src="dist/webgazer.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.7.570/build/pdf.min.js"></script>
     <script src="script.js" defer></script>
   </head>
