Add Vietnamese translation and interactive dot

--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
   <body>
     <!-- Input tag for file upload -->
     <div class="file">
-      <h2>PDF Upload Here</h2>
+      <p>Vui lòng chờ cho đến khi mô hình khởi tạo</p>
+      <p>
+        Để có thể đọc sách tự động, vui lòng hiệu chỉnh bằng cách click vào chấm
+        xanh cho đến khi chấm xanh biến mất.
+      </p>
+      <h2>Tải lên PDF tại đây</h2>
+      <div class="dot" id="clickDot"></div>
       <input type="file" id="fileInput" onchange="displayPDF()" />
     </div>
 
