--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Eye tracking</title>
+    <title>Đọc sách tự động - ET</title>
     <link rel="stylesheet" href="style.css" />
     <script src="dist/webgazer.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.7.570/build/pdf.min.js"></script>
